--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
 </div>  
   <div class="container">
     <h1>大或小</h1>
+    <div style="font-size: 20px;">
+      <div>
+        <span>當前分數:</span>
+        <span id="score">100</span>
+      </div>
+      <div style="display: flex;justify-content: center;">
+        <span>下注</span>
+        <input type="number" id="bet" value="100" style="width: 100px;font-size: 15px;">
+        <span id="msg"></span>
+      </div>
+    </div>
     <div id="result">點擊開始遊戲</div>
     <div id="cardContainer" class="card-container">
       <div id="handCard" class="card" onclick="drawCard()">開始</div>
